2006-07-??: 1.03
	haxedoc executable now part of the distribution
	removed selectDB from the neko.db.Connection API
	added optional parameters with selection
	removed --no-flash-opt-args
	changed in SWF packages handling
	fixed optional leading comma in anonymous object and array values

2006-06-08: 1.02
	fixed stack overflow when recursive class <: recursive signature
	improved a bit commandline : allow several hxml arguments
	added {> Class, fields... } types declarations
	added cast without type (less dangerous than untyped)
	no stage objects by default, added --flash-use-stage
	added haxe.remoting.DelayedConnection
	added -exclude
	removed classpath from neko debug infos filenames
	fixed bug in Neko empty Array.pop and Neko EReg.replace ""
	fixed nodeValue for Neko XML comments, doctype, prolog
	improved DocView : formating, signatures, files generation
	added neko.zip package
	fixed bug in neko.File binary flags
	fixed problems when downloading large files using haxe.Http under Neko
	neko.db.Connection and neko.db.ResultSet are now interfaces
	added neko.db.Sqlite and neko sqlite ndll
	mod_neko2.ndll for Apache2 in Windows distribution
	fixed bug in static properties method resolution
	change js.Dom : use cascading signatures and improved api
	added haxe.unit Unit test framework

2006-05-25: 1.01
	added neko.Utf8
	Serializer/Unserializer now support utf8 strings
	allowed subtyping of prop accesses public/private when implementing an interface
	removed "eval" from Remoting APIs (only calls - more easy to handle).
	added flash6 support
	fixed Std.is on different platforms (interfaces implements interface)
	added AsyncConnection.amfConnect for flash
	added SWF overflow checks
	changed "property" to "var"
	don't allow monorph unification with Dynamic (more safe)
	allowed multiple parsing and typing errors
	review and completed commandline options
	error on backwards constant integer iterators
	remoting proxy constructor is now public